discounts swagger
